--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angularfire2": "^4.0.0-rc.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "popper": "^1.0.0",
+    "popper.js": "^1.12.6",
     "rxjs": "^5.1.0",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
