--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^4.6.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "intl": "^1.2.5",
     "jquery": "^3.2.1",
     "popper": "^1.0.0",
     "popper.js": "^1.12.6",
