--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^4.4.6",
     "angularfire2": "^5.0.0-rc.3",
     "bootstrap": "^4.0.0-beta.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.1",
     "firebase": "^4.6.1",
     "font-awesome": "^4.7.0",
@@ -36,6 +37,7 @@
     "popper.js": "^1.12.6",
     "rxjs": "^5.5.2",
     "tether": "^1.4.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
