--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
     "angularfire2": "^5.0.0-rc.3",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "4.0.0-beta.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.1",
     "firebase": "^4.6.1",
